[gd_scene load_steps=8 format=3 uid="uid://bkyk2jy0yol6f"]

[ext_resource type="Script" path="res://Scripts/SceneManager.gd" id="1_ak76w"]
[ext_resource type="PackedScene" uid="uid://b3pnd3m6jt6vn" path="res://Scenes/LoginScene.tscn" id="2_ul32n"]
[ext_resource type="PackedScene" uid="uid://dsshwg6eaiojr" path="res://Scenes/DialogueMenu.tscn" id="3_g51lt"]

[sub_resource type="Animation" id="Animation_afk0f"]
resource_name = "FadeFromBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0bq3a"]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"finished_fading"
}]
}

[sub_resource type="Animation" id="Animation_ijiks"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ent3r"]
_data = {
"FadeFromBlack": SubResource("Animation_afk0f"),
"FadeToBlack": SubResource("Animation_0bq3a"),
"RESET": SubResource("Animation_ijiks")
}

[node name="SceneManager" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ak76w")

[node name="LoginScene" parent="." instance=ExtResource("2_ul32n")]

[node name="CurrentScene" type="Node2D" parent="."]
visible = false
y_sort_enabled = true

[node name="PlayerList" type="Node2D" parent="."]
y_sort_enabled = true

[node name="DialogueMenu" parent="." instance=ExtResource("3_g51lt")]
visible = false

[node name="ScreenTransition" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="ScreenTransition"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition"]
libraries = {
"": SubResource("AnimationLibrary_ent3r")
}
